[Qt] Signal and property cleanup in QQuickWebView https://bugs.webkit.org/show_bug.cgi?id=78820

Reviewed by Simon Hausmann.

- Remove parameters from property change notify signals:
  titleChanged, urlChanged, iconChanged, loadProgressChanged
- Rename the parameters of linkHovered to prevent shadoing properties of WebView
- Rename navigationStateChanged to navigationHistoryChanged

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewPrivate::QQuickWebViewPrivate):
(QQuickWebViewPrivate::initialize):
(QQuickWebViewPrivate::_q_onUrlChanged):
(QQuickWebViewPrivate::setIcon):
* UIProcess/API/qt/qquickwebview_p.h:
* UIProcess/API/qt/qquickwebview_p_p.h:
(QQuickWebViewPrivate):
* UIProcess/API/qt/tests/publicapi/tst_publicapi.cpp:
* UIProcess/API/qt/tests/qmltests/DesktopBehavior/tst_linkHovered.qml:
* UIProcess/API/qt/tests/qmltests/DesktopBehavior/tst_loadHtml.qml:
* UIProcess/API/qt/tests/qquickwebview/tst_qquickwebview.cpp:
(tst_QQuickWebView::loadProgress):
* UIProcess/qt/QtWebPageLoadClient.cpp:
(QtWebPageLoadClient::didCommitLoadForFrame):
(QtWebPageLoadClient::didSameDocumentNavigationForFrame):
(QtWebPageLoadClient::didReceiveTitleForFrame):
(QtWebPageLoadClient::setLoadProgress):
* UIProcess/qt/QtWebPageLoadClient.h:
(QtWebPageLoadClient):

git-svn-id: svn://svn.chromium.org/blink/trunk@108816 bbb929c8-8fbe-4397-9dbb-9b2b20218538