Source/WebKit2/UIProcess/API/qt/tests/qmltests/DesktopBehavior/tst_linkHovered.qml
@@ -19,8 +19,8 @@ TestWebView {
     }
 
     onLinkHovered: {
-        webView.lastUrl = url
-        webView.lastTitle = title
+        webView.lastUrl = hoveredUrl
+        webView.lastTitle = hoveredTitle
     }
 
     TestCase {
