third_party/WebKit/Source/WebKit2/UIProcess/API/qt/tests/qmltests/DesktopBehavior/tst_loadHtml.qml
@@ -19,7 +19,7 @@ TestWebView {
     }
 
     onLinkHovered: {
-        webView.lastUrl = url
+        webView.lastUrl = hoveredUrl
     }
 
     TestCase {
